Make delegate modifiable.